--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,8 @@ dependencies = [
     "matplotlib>=3.10.7",
     "numpy>=2.3.3",
     "opencv-python>=4.11.0.86",
+    "pandas>=2.3.3",
+    "pywavelets>=1.9.0",
     "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
 ]
